<resources>
    <string name="app_name">Restaurant</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="provide_email_reset_pass">Provide your account\'s email for which you want to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="login_as_administrator">Login as Administrator</string>
</resources>