<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:scrollbars="none"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:text="@string/forgot_password"
            android:layout_marginTop="18dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/viewExpYear"
            android:text="@string/provide_email_reset_pass"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editForgotPasswordEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                android:backgroundTint="@color/black"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"/>

        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_password_back"
            android:backgroundTint="#FFBBB0"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp" />

    </LinearLayout>

    
</ScrollView>